# matcha-rss

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml  test2.md
src/: digest.rs  lib.rs  main.rs  rss.rs  rsss.rs  weather.rs  yaml.rs
test/: config.yaml
