[package]
name = "matcha-rss"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "matcha"
path = "src/main.rs"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
quick-xml = "0.24"
diesel = { version = "2.2.0", features = ["sqlite"] }
clap = { version = "4.5.20", features = ["derive"] }
chrono = { version = "0.4.38" }
